--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -52,6 +52,9 @@
 /* pager */
 @forward 'objects/utility/pager';
 
+/* breadcrumb */
+@forward 'objects/utility/breadcrumb';
+
 /* animation */
 @forward 'objects/utility/animation';
 
