--- a/styles/objects/project/_page.scss
+++ b/styles/objects/project/_page.scss
@@ -5,8 +5,16 @@
 .p__page__container {
   padding: 80px 0;
 
+  &--detail {
+    padding-bottom: 20px;
+  }
+
   @include g.mq('tb') {
     padding: 50px 0;
+
+    &--detail {
+      padding-bottom: 15px;
+    }
   }
 }
 
