--- a/styles/objects/project/_page.scss
+++ b/styles/objects/project/_page.scss
@@ -117,6 +117,15 @@
   p {
     line-height: g.$lh-wide;
 
+    a {
+      color: g.$col-blue;
+      transition: g.$opacity;
+
+      &:hover {
+        opacity: 0.6;
+      }
+    }
+
     &+p {
       margin-top: 1em;
     }
@@ -251,6 +260,12 @@
     p {
       font-size: 1.4rem;
       line-height: 1.8;
+
+      a {
+        &:hover {
+          opacity: 1;
+        }
+      }
 
       &+h2 {
         margin-top: 50px;
