--- a/styles/objects/project/_news.scss
+++ b/styles/objects/project/_news.scss
@@ -40,9 +40,30 @@
   display: flex;
   align-items: center;
 
+  //hover
+  &:hover {
+    .p__news__img__item {
+      transform: scale(1.1);
+    }
+
+    .p__news__h {
+      color: g.$col-blue;
+    }
+  }
+
   @include g.mq('tb') {
     padding: 20px 0;
     display: block;
+
+    &:hover {
+      .p__news__img__item {
+        transform: scale(1);
+      }
+
+      .p__news__h {
+        color: g.$fc-base;
+      }
+    }
   }
 }
 
@@ -134,6 +155,7 @@
   width: calc(100% - 130px);
   font-size: 1.6rem;
   font-weight: g.$fw-regular;
+  transition: g.$hov-color;
 
   @include g.mq('tb') {
     width: calc(100% - 90px);
